[project]
name = "oier-contest-compare"
version = "0.1.0"
description = "Compare scores in two contests using datas from OIerDB"
authors = [
    {name = "weilycoder",email = "weily2009@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib (>=3.10.8,<4.0.0)",
    "numpy (>=2.3.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
